--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "expo": "^23.0.4",
     "react": "16.0.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-23.0.0.tar.gz",
+    "react-native-spotify": "git+https://github.com/lufinkey/react-native-spotify.git",
     "react-navigation": "^1.0.0-beta.23"
   }
 }
