--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,3 +1,5 @@
 include ':app'
 include ':react-native-spotify'
 project(':react-native-spotify').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-spotify/android')
+include ':react-native-spotify'
+project(':react-native-spotify').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-spotify/android')
