--- a/android/build.gradle
+++ b/android/build.gradle
@@ -24,6 +24,9 @@ allprojects {
     maven {
       url 'https://maven.google.com'
     }
+    flatDir {
+			dirs project(':react-native-spotify').file('libs'), 'libs'
+    }
   }
 }
 
